short description & looking for; ready for abroad
